--- a/praca/main.tex
+++ b/praca/main.tex
@@ -305,7 +305,7 @@ Uniwersytet Warszawski}
     Głową frazy \textit{czerwone jabłko} jest rzeczownik \textit{jabłko}, a przymiotnik \textit{czerwone} jest jej modyfikatorem.
     Pozycyjność głowy jest jednym z kryteriów klasyfikacji języków naturalnych i ma wpływ na ich strukturę syntaktyczną i semantyczną.
     Oznacza ona pozycję głowy względem reszty frazy.
-    W zależności od pozycyjności głowy, języki można podzielić na inicjalne (\textit{head-initial}) oraz finalne (\textit{head-final}). Na przykład, w~języku angielskim, który jest inicjalny, głowa frazy zazwyczaj (ale nie zawsze) znajduje się przed jej dopełnieniem (\textit{eat a red apple}), natomiast w języku japońskim, który jest finalny, głowa zazwyczaj jest za dopełnieniem, a ta sama fraza zapisana by była jako $\textit{czerwone (a dokładniej: być czerwonym)}_{[\textsc{npast}]}$ $\textit{jabłko}_{[\textsc{acc}]}$ $\textit{jeść}_{[\textsc{npast}]}$ (\textit{aka-i ringo-o tabe-ru})\footnote{\url{https://en.wikipedia.org/wiki/Head-directionality_parameter}, dostęp z~dn.~08.04.2023 oraz \url{https://www.uni-bamberg.de/fileadmin/aspra/01_Studium/sample_termpaper_ma_generallinguistics.pdf}, dostęp z~dn.~19.04.2023}.
+    W zależności od pozycyjności głowy, języki można podzielić na inicjalne (\textit{head-initial}) oraz finalne (\textit{head-final}). Na przykład w~języku angielskim, który jest inicjalny, głowa frazy zazwyczaj (ale nie zawsze) znajduje się przed jej dopełnieniem (\textit{eat a red apple}), natomiast w języku japońskim, który jest finalny, głowa zazwyczaj jest za dopełnieniem, a ta sama fraza zapisana by była jako $\textit{czerwone (a dokładniej: być czerwonym)}_{[\textsc{npast}]}$ $\textit{jabłko}_{[\textsc{acc}]}$ $\textit{jeść}_{[\textsc{npast}]}$ (\textit{aka-i ringo-o tabe-ru})\footnote{\url{https://en.wikipedia.org/wiki/Head-directionality_parameter}, dostęp z~dn.~08.04.2023 oraz \url{https://www.uni-bamberg.de/fileadmin/aspra/01_Studium/sample_termpaper_ma_generallinguistics.pdf}, dostęp z~dn.~19.04.2023}.
 
     Badania wykazały, że~istnieje związek między pozycyjnością głowy a~długością zależności, przy czym języki finalne mają średnio krótszą długość zależności niż języki inicjalne~\citep{FutrellEtAl2015}.
 
@@ -421,7 +421,7 @@ Uniwersytet Warszawski}
     W przypadku PP, VP oraz CP\footnote{Wyjaśnienia użytych skrótów: VP -- fraza czasownikowa (ang. \textit{verb phrase}); CP -- fraza zdaniowa podrzędna (ang. \textit{complementizer phrase}), np. \textit{że on przyszedł}.} zazwyczaj będzie to pierwsze słowo od lewej strony.
     W przypadku NP, przyjmując, że~jego głową jest rzeczownik, średnio będzie to drugie słowo -- zwykle rzeczownik jest poprzedzony przedimkiem.
 
-    W podejściu londyńskim, zakładając pozycję nadrzędnika z lewej strony (zob.~(\ref{dep:MH}\ref{dep:MH1}--\ref{dep:MH2})), suma długości zależności jest zminimalizowana, gdy lewy człon jest krótszy.\footnote{Rysunki (\ref{dep:MH})--(\ref{dep:CNc}) pochodzą z pracy Przepiórkowskiego i Woźniaka (\citeyear{Przepiorkowski2023}).}
+    W podejściu londyńskim, zakładając pozycję nadrzędnika z lewej strony (zob.~(\ref{dep:MH}\ref{dep:MH1}--\ref{dep:MH2})), suma długości zależności jest zminimalizowana, gdy lewy człon jest krótszy\footnote{Rysunki (\ref{dep:MH})--(\ref{dep:CNc}) pochodzą z pracy Przepiórkowskiego i Woźniaka (\citeyear{Przepiorkowski2023}).}.
     Symetrycznie, gdy nadrzędnik jest z prawej strony (zob.~(\ref{dep:MH}\ref{dep:MH5}--\ref{dep:MH6})), suma długości zależności jest zminimalizowana, gdy to prawy człon jest krótszy.
     Wartość zminimalizowanej sumy w obu przypadkach jest różna od wyższej sumy o~różnicę długości członów.
     Gdy~nadrzędnik nie występuje (zob.~(\ref{dep:MH}\ref{dep:MH3}--\ref{dep:MH4})), suma długości nie~zależy w ogóle od długości członów.
@@ -827,15 +827,26 @@ Uniwersytet Warszawski}
         \item pozycja nadrzędnika istotnie wpływa na zmianę tej tendencji wraz ze zmianą różnicy w długości członów koordynacji. Kiedy nadrzędnik jest z lewej strony, bądź go nie ma, tendencja do umieszczania krótszego członu na pierwszej pozycji rośnie wraz ze wzrostem modułu (wartości bezwzględnej) z różnicy długości pierwszego i~ostatniego członu. Gdy nadrzędnik jest z prawej strony, efektu takiego już nie~ma.
     \end{enumerate}
 
-    Spodziewam się, że wyniki dla języka polskiego będą podobne, tj. pierwszy człon koordynacji będzie częściej krótszy od ostatniego członu oraz proporcja ta będzie rosła wraz~ze wzrostem modułu z różnicy długości między członami -- ale tylko gdy nadrzędnik nie występuje lub znajduje się po lewej stronie. Gdy nadrzędnik jest po prawej stronie, spodziewam się, że będzie zgodnie z DLM ,,przyciągał'' do siebie krótszy człon, przez co wpływ różnicy długości członów na proporcję członów będzie istotnie mniejszy lub nie będzie go wcale.
+    Spodziewam się, że wyniki dla języka polskiego będą podobne, tj.: pierwszy człon koordynacji będzie częściej krótszy od ostatniego członu oraz proporcja ta będzie rosła wraz~ze wzrostem modułu z różnicy długości między członami -- ale tylko gdy nadrzędnik nie występuje lub znajduje się po lewej stronie. Gdy nadrzędnik jest po prawej stronie, spodziewam się, że będzie zgodnie z DLM ,,przyciągał'' do siebie krótszy człon, przez co wpływ różnicy długości członów na proporcję członów będzie istotnie mniejszy lub nie będzie go wcale.
 
     Pierwsza z hipotez wiąże się z tym, że pośród użytkowników języka może istnieć ogólna tendencja do umieszczania krótszego członu na pierwszej pozycji, niezależnie od~pozycji nadrzędnika.
 
     Druga z hipotez ma na celu wzięcie pod uwagę tego, że DLM może mieć wpływ na~to, który~człon jest krótszy, a który dłuższy, nawet jeśli istnieje tendencja badana w~hipotezie pierwszej.
-    Zgodnie z DLM, przy zwiększaniu modułu z różnicy długości członów powinna rosnąć proporcja koordynacji, w których krótszy człon jest na pierwszej pozycji.
-    Gdy nadrzędnik jest z prawej strony, modele symetryczne oraz wariacje niesymetrycznych, w których głową jest człon bliżej nadrzędnika przewidują, że zgodnie z DLM obojętne będzie, który człon jest krótszy, a który dłuższy, lub krótszy powinien być ten z prawej.
-    Jeśli skupimy się więc tylko na koordynacjach z nadrzędnikiem z prawej strony, połączenie ogólnej tendencji do preferowania krótszych lewych członów z~DLM powinno skutkować tym, że wraz ze wzrostem modułu z różnicy długości członów, proporcja koordynacji, w których krótszy człon jest na pierwszej pozycji, będzie rosnąć istotnie słabiej niż w pozostałych przypadkach, lub wręcz nie będzie rosnąć wcale.
-    Hipoteza ta byłaby więc argumentem za symetrycznymi reprezentacjami koordynacji, ponieważ najlepiej ukazywałyby one w tym przypadku wpływ DLM na ustawienie członów koordynacji.
+    Niezależnie od podejścia co do reprezentowania koordynacji, biorąc pod uwagę tylko koordynacje z nadrzędnikiem z lewej strony, zgodnie z DLM, przy zwiększaniu modułu z różnicy długości członów powinna rosnąć proporcja koordynacji, w których krótszy człon jest na pierwszej pozycji.
+    Gdy nadrzędnik nie występuje, reprezentacja londyńska przewiduje, że DLM nie miałoby wpływu na ułożenie członów, jako że suma zależności byłaby od niego niezależna.
+    Wtedy dalej moglibyśmy spodziewać się, że lewy człon będzie krótszy od prawego, ale tylko na podstawie ogólnej tendencji do umieszczania krótszego członu na pierwszej pozycji (z hipotezy~nr~1).
+    Pozostałe reprezentacje przewidują, że zgodnie z DLM, gdy nie ma nadrzędnika koordynacji, to~jej~krótszy człon powinien być na pierwszej pozycji.
+    Gdy nadrzędnik jest z~prawej strony, modele symetryczne oraz wariacje niesymetrycznych, w których głową jest człon bliżej nadrzędnika przewidują, że zgodnie z DLM obojętne będzie, który człon jest krótszy, a~który dłuższy, lub krótszy powinien być ten z prawej. 
+    Podstawowe wersje reprezentacji niesymetrycznych pokazują natomiast, że zgodne z DLM by było ustawianie krótszego członu na pierwszej pozycji, nawet gdy nadrzędnik jest z prawej strony.
+    Jeśli skupimy się więc tylko na koordynacjach z nadrzędnikiem z prawej strony, połączenie ogólnej tendencji do preferowania krótszych lewych członów z~DLM (tą przewidzianą przez modele symetryczne) powinno skutkować tym, że wraz~ze~wzrostem modułu z różnicy długości członów, proporcja koordynacji, w których krótszy człon jest na pierwszej pozycji, będzie rosnąć istotnie słabiej niż w pozostałych przypadkach, lub wręcz nie będzie rosnąć wcale.
+    Jeśli tak będzie, hipoteza ta może być argumentem za symetrycznymi reprezentacjami koordynacji, ponieważ najlepiej ukazywałyby one w~tym przypadku wpływ DLM na ustawienie członów koordynacji.
+    \newpage
+
+    Badam tę tendencję (zależności między proporcją koordynacji z krótszym lewym członem a~modułem z różnicy długości członów), ponieważ w każdej sytuacji, w której dana reprezentacja przewiduje, że jedno uszeregowanie członów jest zgodne z DLM, wraz ze wzrostem modułu z różnicy długości między członami DLM jeszcze bardziej będzie faworyzować to uszeregowanie, z powodu większego zysku w minimalizacji sumy długości wszystkich zależności.
+    Wtedy, nawet jeśli ogólna tendencja do~umieszczania krótszego członu na pierwszej pozycji będzie przeważać, gdy różnica długości między członami jest mała, to wraz ze wzrostem modułu z tej różnicy, DLM będzie coraz silniej wpływać na ustawienie członów, aż w końcu może zacznie przeważać nad~ogólną tendencją albo istotnie osłabi jej wpływ.
+    Najłatwiej jest to zbadać w przypadku, gdy~nadrzędnik jest z prawej strony, ponieważ wtedy jest najbardziej widoczny wpływ DLM na~to, który człon jest krótszy.
+    Stąd też w hipotezie nr 2 koordynacje z~nadrzędnikiem z~prawej strony są w~opozycji do~tych z~nadrzędnikiem z~lewej strony oraz tych bez~nadrzędnika.
+    Jak~wyjaśniłem wyżej, w pozostałych dwóch przypadkach DLM działa zgodnie z ogólną tendencją do umieszczania krótszego członu na pierwszej pozycji lub~nie~ma wpływu na~ustawienie członów.
 
     \chapter{Dane}\label{ch:dane}
     W~tym rozdziale przedstawiam korpus będący źródłem danych użytych w~mojej pracy, kryteria ich wyodrębniania oraz sposób ich przygotowania do~analizy statystycznej.
@@ -1082,23 +1093,19 @@ Uniwersytet Warszawski}
     W~rozdziale tym przedstawiam wyniki analizy statystycznej dla wyodrębnionych koordynacji, prezentując też istotne tabele oraz wykresy. Ponadto, cała ta analiza znajduje się w \ref{zal:d}.
 
     \section{Przypomnienie hipotez}
-    W~\ref{sec:hipotezy} przedstawiłem hipotezy, które chcę zweryfikować w~ramach tej pracy. W~tym rozdziale przedstawiam je~jeszcze raz, tym razem bardziej skonkretyzowane, a~następnie przechodzę do~ich weryfikacji.
+    W~punkcie \ref{sec:hipotezy} przedstawiłem hipotezy, które chcę zweryfikować w~ramach tej pracy. W~tym rozdziale przedstawiam je~jeszcze raz, tym razem bardziej skonkretyzowane, a~następnie przechodzę do~ich weryfikacji.
     Oto one:
     \begin{enumerate}[label=\arabic*)]
         \item 
         Prawy człon koordynacji jest średnio dłuższy od~lewego członu, zarówno w całym korpusie, jak i~osobno w~każdej z~trzech najliczniejszych grup koordynacji -- przy podziale ze względu na pozycję i obecność nadrzędnika (bez koordynacji z nadrzędnikiem pomiędzy członami). Powinno tak być niezależnie od przyjętej miary długości (tokeny, słowa, sylaby, znaki).
         \item
-        W przypadku koordynacji bez nadrzędnika lub tych z nadrzędnikiem z lewej strony, wraz ze wzrostem modułu z różnicy długości między członami proporcje koordynacji, w których lewy człon jest krótszy powinny istotnie statystycznie rosnąć. W przypadku koordynacji z nadrzędnikiem z prawej strony, albo występowuje podobny wzrost, lecz istotnie statystycznie mniejszy od obu z pozostałych przypadków, albo wzrost ten w ogóle nie występuje. Hipoteza ta również zakłada, że powinno tak być niezależnie od przyjętej miary długości.
+        W przypadku koordynacji bez nadrzędnika lub tych z nadrzędnikiem z lewej strony, wraz ze wzrostem modułu z różnicy długości między członami proporcje koordynacji, w których lewy człon jest krótszy, powinny istotnie statystycznie rosnąć. W przypadku koordynacji z nadrzędnikiem z prawej strony, albo występowuje podobny wzrost, lecz istotnie statystycznie mniejszy od obu z pozostałych przypadków, albo wzrost ten w ogóle nie występuje. Hipoteza ta również zakłada, że powinno tak być niezależnie od przyjętej miary długości.
     \end{enumerate}
     
 
     \section{Podstawowa analiza}\label{sec:podstawowa-analiza}
     Jak widać w~tabeli (\ref{tab:1}), średnia długość lewego członu koordynacji jest mniejsza od~średniej długości prawego członu, patrząc zarówno na~znaki, jak i~sylaby, słowa oraz tokeny.
     Mediana albo jest taka sama, albo również mniejsza dla lewego członu.
-    Efekty te~widać dla każdej z~czterech grup koordynacji -- kooordynacji bez nadrzędnika, tych z~nadrzędnikiem po~lewej stronie, tych z~nadrzędnikiem pomiędzy członami oraz, co~najważniejsze, tych z~nadrzędnikiem po~prawej stronie.
-    Ten ostatni wynik od~razu potwierdza, że~hipoteza o~tym, że~lewy człon koordynacji jest krótszy od~prawego, jest prawdziwa, w~opozycji do~hipotezy o~tym, że~to~człon bliższy nadrzędnika jest krótszy.
-    Koordynacje z nadrzędnikiem pomiędzy członami są rzadkie i nie ma ich wystarczającej liczby, aby móc przeprowadzić dokładną analizę statystyczną, dlatego też pod uwagę (zarówno tutaj, jak i w dalszych etapach analizy) biorę tylko trzy pozostałe typy koordynacji -- te bez nadrzędnika, te z nadrzędnikiem z lewej oraz te z nadrzędnikiem z prawej strony.
-    Wszystkie z interesujących mnie efektów, których jest 12, są istotne statystycznie, i to bardzo silnie (\textit{p} < 0,001), zatem widzimy, że~różnice w~długościach są~znaczące.
    \begin{exe}
         \ex\label{tab:1}
         \begin{tabular}[t]{l|rr:rrp{1.8cm}r}
@@ -1150,9 +1157,14 @@ Uniwersytet Warszawski}
             \hline
         \end{tabular}
 \end{exe}
+\phantom{a}
+
+Efekty te~widać dla każdej z~czterech grup koordynacji -- kooordynacji bez nadrzędnika, tych z~nadrzędnikiem po~lewej stronie, tych z~nadrzędnikiem pomiędzy członami oraz, co~najważniejsze, tych z~nadrzędnikiem po~prawej stronie.
+Ten ostatni wynik od~razu potwierdza, że~hipoteza o~tym, że~lewy człon koordynacji jest krótszy od~prawego, jest prawdziwa, w~opozycji do~hipotezy o~tym, że~to~człon bliższy nadrzędnika jest krótszy.
+Koordynacje z nadrzędnikiem pomiędzy członami są rzadkie i nie ma ich wystarczającej liczby, aby móc przeprowadzić dokładną analizę statystyczną, dlatego też pod uwagę (zarówno tutaj, jak i w dalszych etapach analizy) biorę tylko trzy pozostałe typy koordynacji -- te bez nadrzędnika, te z~nadrzędnikiem z lewej oraz te z~nadrzędnikiem z prawej strony.
+Wszystkie z interesujących mnie efektów, których jest~12, są istotne statystycznie, i to bardzo silnie (\textit{p} < 0,001), zatem widzimy, że~różnice w~długościach są~znaczące.
 
 Analizę tę przeprowadziłem za pomocą nieparametrycznego testu Wilcoxona badającego hipotezę o równości średnich dwóch różnych parametrów dla tej samej próby, używając agumentu \texttt{alternative = "less"}, określającego hipotezę alternatywną jako lewy człon koordynacji będący średnio krótszym. Test ten jest alternatywą dla standardowego testu t--Studenta dla prób zależnych, gdy są złamane założenia o normalności rozkładów lub równości wariancji. Dane nie spełniały założeń normalności, jak widać na przykładowych 4 histogramach pokazujących rozkłady koordynacji z lewym członem o podanej długości -- bez rozróżnienia ze względu na pozycję nadrzędnika (\ref{ex:histogramy}).
-\newpage
 \begin{exe}
     \ex\label{ex:histogramy}
 \end{exe}
@@ -1160,7 +1172,7 @@ Analizę tę przeprowadziłem za pomocą nieparametrycznego testu Wilcoxona bada
     \includegraphics[scale = 0.75]{../analizy/histogramy.pdf}
 \end{figure}
 
-
+\newpage
 \section{Dalsza analiza}\label{sec:dalsza-analiza}
 Wiemy już, że~w~języku polskim, podobnie jak w~angielskim, lewy człon koordynacji jest średnio krótszy niż prawy człon.
 W~tej sekcji skupiam się na~hipotezie, że zgodnie z DLM, ~gdy nadrzędnik jest z prawej strony, to ,,przyciąga'' do~siebie krótszy człon -- co~osłabia ogólną tendencję do~umieszczania krótszego członu po~lewej stronie, gdy nadrzędnik jest z~prawej strony.
@@ -1203,15 +1215,15 @@ Proporcje te~są~niższe niż dla koordynacji z~nadrzędnikiem z~lewej lub prawe
             & prop.
             & \textit{N}                & $\chi$^2(1) & \multicolumn{1}{c}{\textit{p}} & $\chi$^2(1)                & \multicolumn{1}{c}{\textit{p}} \\
             \hline
-            \multicolumn{1}{l|}{słowa}  & 0,621 & \multicolumn{1}{c:}{3369} & 23,015      & 1,61e-06   & \multicolumn{1}{:r}{4,450} & 0,445 \\
-            \multicolumn{1}{l|}{tokeny} & 0,619 & \multicolumn{1}{c:}{3390} & 22,301      & 2,33e-06   & \multicolumn{1}{:r}{2,175} & 0,448 \\
+            \multicolumn{1}{l|}{słowa}  & 0,621 & \multicolumn{1}{c:}{3369} & 23,015      & 1,61e-06   & \multicolumn{1}{:r}{0,583} & 0,445 \\
+            \multicolumn{1}{l|}{tokeny} & 0,619 & \multicolumn{1}{c:}{3390} & 22,301      & 2,33e-06   & \multicolumn{1}{:r}{0,577} & 0,448 \\
             \multicolumn{1}{l|}{sylaby} & 0,604 & \multicolumn{1}{c:}{3641} & 16,320      & 5,35e-05   & \multicolumn{1}{:r}{4,490} & 0,034 \\
             \multicolumn{1}{l|}{znaki}  & 0,604 & \multicolumn{1}{c:}{3757} & 11,143      & 8,44e-04   & \multicolumn{1}{:r}{1,802} & 0,179 \\
             \hline
         \end{tabular}
 \end{exe}
 
-Efekt ten można wyjaśnić tym, że~koordynacje bez nadrzędnika to~zazwyczaj koordynacje zdań lub fraz czasownikowych, a~jak wskazują \citet{Przepiorkowski2023} wiele z~tych koordynacji ma~strukturę zdania lub frazy czasownikowej i~komentarza do~niej (zob. (\ref{ex:komentarz})), czy też długiego zdania, po~którym następuje następne, znacznie krótsze, bo używające elipsy (zob. (\ref{ex:elipsa})).
+Efekt ten można wyjaśnić tym, że~koordynacje bez nadrzędnika to~zazwyczaj koordynacje zdań lub fraz czasownikowych, a~jak wskazują \citet{Przepiorkowski2023} wiele z~tych koordynacji ma~strukturę zdania lub frazy czasownikowej i~komentarza do~niej (zob. (\ref{ex:komentarz})), czy też długiego zdania, po~którym następuje zdanie znacznie krótsze, bo używające elipsy (zob. (\ref{ex:elipsa}))\footnote{Przykłady (32)--(33) pochodzą z PDB.}.
 \renewcommand{\figurename}{\hspace{-0.1cm}}
 \renewcommand\thefigure{Rys. \arabic{figure}}
 \setcounter{figure}{0}
@@ -1219,7 +1231,7 @@ Efekt ten można wyjaśnić tym, że~koordynacje bez nadrzędnika to~zazwyczaj k
     \ex\label{ex:komentarz}
     [— Aaa — powiedziała Margie Tallworth\textbf{\Large{;}} zatkało ją].
     \ex\label{ex:elipsa}
-    [Stary pan Przypkowski był kolekcjonerem, naukowcem i konstruktorem zegarów, \textbf{a} młody — rzeźbiarzem i germanofilem].\footnote{Oba przykłady pochodzą z PDB.}
+    [Stary pan Przypkowski był kolekcjonerem, naukowcem i konstruktorem zegarów, \textbf{a} młody — rzeźbiarzem i germanofilem].
 \end{exe}
 Oznacza to, że~porównywanie całkowitych proporcji nie jest właściwym argumentem za~wpływem bliskości nadrzędnika.
 
@@ -1306,11 +1318,11 @@ Jak możemy zauważyć, okazuje się, że~jedynie dwie wartości są~istotne sta
     W~tym rozdziale omawiam wyniki analizy z~poprzedniego rozdziału, interpretuję je~w~kontekście istniejącej literatury oraz wskazuję możliwe kierunki dalszych badań.
 
     \section{Podsumowanie wyników badań}\label{sec:podsumowanie-wynikow-badan}
-    Zgodnie z~oczekiwaniami, lewy człon koordynacji jest krótszy niezależnie od~pozycji nadrzędnika oraz od~przyjętej miary długości tekstu.
+    Zgodnie z~oczekiwaniami lewy człon koordynacji jest krótszy niezależnie od~pozycji nadrzędnika oraz od~przyjętej miary długości tekstu.
     Co~do~drugiej hipotezy, mówiącej o~tym, że~istnieje tendencja do~preferowania szeregu z~krótszym członem z~lewej strony wraz ze~wzrostem różnicy długości członów oraz że~tendencja ta~jest silniejsza w~przypadku braku nadrzednika lub obecności nadrzędnika z~lewej strony, wyniki są~niejednoznaczne.
     Możemy zauważyć wspomnianą tendencję, jest ona obecna: (1)~w~przypadku braku nadrzędnika -- niezależnie od~przyjętej miary długości, (2)~w~przypadku nadrzędnika z~lewej strony -- również niezależnie od~przyjętej miary długości, (3)~w~przypadku nadrzędnika z~prawej strony -- w~przypadku mierzenia długości członów w~znakach, tokenach oraz słowach. 
     Oznacza to, że gdy nadrzędnik jest z prawej strony, tendencja nie jest istotna statystycznie jedynie w przypadku mierzenia długości w sylabach.
-    Zgodnie z hipotezą, tendencja ta powinna być istotna tylko w przypadku braku nadrzędnika oraz nadrzędnika z lewej strony, bądź w przypadku nadrzędnika z prawej strony powinna być istotnie słabsza.
+    Zgodnie z hipotezą tendencja ta powinna być istotna tylko w przypadku braku nadrzędnika oraz nadrzędnika z lewej strony, bądź w przypadku nadrzędnika z prawej strony powinna być istotnie słabsza.
     Jedynie przyjmując za~miarę długości sylaby możemy zauważyć, że~tendencja ta~spełnia nasze oczekiwania.
     Niezależnie od~przyjętej miary długości, widać jednak pewne trendy, które nie są~istotne statystycznie (poza miarą długości w~sylabach), ale wszystkie są~nakierowane w~tym samym kierunku.
     Dla każdej miary długości wynik wskazuje na~to, że~tendencja do~silniejszego preferowania krótszego członu z~lewej strony wraz ze~wzrostem modułu z~długości różnicy członów jest najsilniejsza w~przypadku nadrzędnika z~lewej strony, słabsza w~przypadku braku nadrzędnika oraz najsłabsza w~przypadku u~nadrzędnika z~prawej strony.
