--- a/praca/main.tex
+++ b/praca/main.tex
@@ -846,7 +846,7 @@ Uniwersytet Warszawski}
     Wtedy, nawet jeśli ogólna tendencja do~umieszczania krótszego członu na pierwszej pozycji będzie przeważać, gdy różnica długości między członami jest mała, to wraz ze wzrostem modułu z tej różnicy, DLM będzie coraz silniej wpływać na ustawienie członów, aż w końcu może zacznie przeważać nad~ogólną tendencją albo istotnie osłabi jej wpływ.
     Najłatwiej jest to zbadać w przypadku, gdy~nadrzędnik jest z prawej strony, ponieważ wtedy jest najbardziej widoczny wpływ DLM na~to, który człon jest krótszy.
     Stąd też w hipotezie nr 2 koordynacje z~nadrzędnikiem z~prawej strony są w~opozycji do~tych z~nadrzędnikiem z~lewej strony oraz tych bez~nadrzędnika.
-    Jak~wyjaśniłem wyżej, w pozostałych dwóch przypadkach DLM działa zgodnie z ogólną tendencją do umieszczania krótszego członu na pierwszej pozycji lub~nie~ma wpływu na~ustawienie członów.
+    Jak~wyjaśniłem wyżej, w dwóch ostatnich przypadkach DLM działa zgodnie z ogólną tendencją do umieszczania krótszego członu na pierwszej pozycji lub~nie~ma wpływu na~ustawienie członów.
 
     \chapter{Dane}\label{ch:dane}
     W~tym rozdziale przedstawiam korpus będący źródłem danych użytych w~mojej pracy, kryteria ich wyodrębniania oraz sposób ich przygotowania do~analizy statystycznej.
