--- a/praca/main.tex
+++ b/praca/main.tex
@@ -836,11 +836,10 @@ Uniwersytet Warszawski}
     Gdy nadrzędnik nie występuje, reprezentacja londyńska przewiduje, że DLM nie miałoby wpływu na ułożenie członów, jako że suma zależności byłaby od niego niezależna.
     Wtedy dalej moglibyśmy spodziewać się, że lewy człon będzie krótszy od prawego, ale tylko na podstawie ogólnej tendencji do umieszczania krótszego członu na pierwszej pozycji (z hipotezy~nr~1).
     Pozostałe reprezentacje przewidują, że zgodnie z DLM, gdy nie ma nadrzędnika koordynacji, to~jej~krótszy człon powinien być na pierwszej pozycji.
-    Gdy nadrzędnik jest z~prawej strony, modele symetryczne oraz wariacje niesymetrycznych, w których głową jest człon bliżej nadrzędnika przewidują, że zgodnie z DLM obojętne będzie, który człon jest krótszy, a~który dłuższy, lub krótszy powinien być ten z prawej. 
+    Gdy nadrzędnik jest z~prawej strony, model londyński przewiduje, że zgodnie z DLM krótszy człon powinien być z~prawej strony, a model praski oraz wariacje niesymetrycznych, w których głową jest człon bliżej nadrzędnika, że zgodnie z DLM ustawienie członów jest obojętne.
     Podstawowe wersje reprezentacji niesymetrycznych pokazują natomiast, że zgodne z DLM by było ustawianie krótszego członu na pierwszej pozycji, nawet gdy nadrzędnik jest z prawej strony.
-    Jeśli skupimy się więc tylko na koordynacjach z nadrzędnikiem z prawej strony, połączenie ogólnej tendencji do preferowania krótszych lewych członów z~DLM (tą przewidzianą przez modele symetryczne) powinno skutkować tym, że wraz~ze~wzrostem modułu z różnicy długości członów, proporcja koordynacji, w których krótszy człon jest na pierwszej pozycji, będzie rosnąć istotnie słabiej niż w pozostałych przypadkach, lub wręcz nie będzie rosnąć wcale.
+    Przyjmując za poprawne modele symetryczne, bądź bardziej symetryczne wersje tych niesymetrycznych, jeśli skupimy się tylko na koordynacjach z nadrzędnikiem z prawej strony, połączenie ogólnej tendencji do preferowania krótszych lewych członów z~DLM powinno skutkować tym, że wraz~ze~wzrostem modułu z różnicy długości członów, proporcja koordynacji, w których krótszy człon jest na pierwszej pozycji, będzie rosnąć istotnie słabiej niż w pozostałych przypadkach, lub wręcz nie będzie rosnąć wcale.
     Jeśli tak będzie, hipoteza ta może być argumentem za symetrycznymi reprezentacjami koordynacji, ponieważ najlepiej ukazywałyby one w~tym przypadku wpływ DLM na ustawienie członów koordynacji.
-    \newpage
 
     Badam tę tendencję (zależności między proporcją koordynacji z krótszym lewym członem a~modułem z różnicy długości członów), ponieważ w każdej sytuacji, w której dana reprezentacja przewiduje, że jedno uszeregowanie członów jest zgodne z DLM, wraz ze wzrostem modułu z różnicy długości między członami DLM jeszcze bardziej będzie faworyzować to uszeregowanie, z powodu większego zysku w minimalizacji sumy długości wszystkich zależności.
     Wtedy, nawet jeśli ogólna tendencja do~umieszczania krótszego członu na pierwszej pozycji będzie przeważać, gdy różnica długości między członami jest mała, to wraz ze wzrostem modułu z tej różnicy, DLM będzie coraz silniej wpływać na ustawienie członów, aż w końcu może zacznie przeważać nad~ogólną tendencją albo istotnie osłabi jej wpływ.
